tests/sema/fail/borrow_mut_conflict.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  int a = 1;
  &mut a;
  &a;
  return 0;
}
